--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -17,9 +17,10 @@
             font-size: 2.4rem;
             font-weight: 800;
             padding: 6.5rem;
-            background: linear-gradient(184deg, $primaryColor, $primaryColor 80%, $textColor calc(80% + 1px), $textColor 100%)
+            background: linear-gradient(184deg, $primaryColor, $primaryColor 80%, $textColor calc(80% + 1px), $textColor 100%);
             
         }
+
         &--desc{
             font-size: 1.6rem;
             font-weight: 400;
@@ -92,5 +93,82 @@
             outline: 0;
         }
         
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .header{
+        &__title{
+            text-align: center;
+            width: 100%;
+            font-size: 2.4rem;
+            font-weight: 800;
+            padding: 6.5rem;
+            
+            background: linear-gradient(182deg, $primaryColor, $primaryColor 80%, $textColor calc(80% + 1px), $textColor 100%);
+
+            &--title{
+                background: 0;
+                padding: 0;
+            }
+            
+            &--desc{
+                color: $textColor;
+            }
+        }
+
+        &__form{
+            display: flex;
+            justify-content: space-evenly;
+            width: 93%;
+            padding: 0 10rem;
+
+            &--input{
+                max-width: 23rem;
+            }
+
+            &--button{
+                max-width: 7rem;
+            }
+
+            &--label{
+                display: inline;
+                text-align: right;
+                max-width: 100%;
+                margin-right: 2rem;
+            }
+
+            &--select{
+                flex-grow: 1;
+                max-width: 20rem;
+                padding: 1rem;
+                border-radius: 1rem;
+                border: 0;
+                outline: 0;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 566px){
+    .header{
+        &__title{
+            text-align: center;
+            width: 100%;
+            font-size: 2.4rem;
+            font-weight: 800;
+            padding: 6.5rem;
+            
+            background: linear-gradient(182deg, $primaryColor, $primaryColor 80%, $textColor calc(80% + 1px), $textColor 100%);
+
+            &--title{
+                background: 0;
+                padding: 0;
+            }
+            
+            &--desc{
+                color: $textColor;
+            }
+        }
     }
 }
