--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,11 +18,20 @@ html{
     max-width: 100vw;
 }
 
-
-
 body{
     max-width: 100vw;
     min-height: 100vh;
     background-color: $textColor;
     font-family: $fontStack;
+}
+
+button, select{
+    cursor: pointer;
+}
+
+.hide{
+    display: none;
+    @media screen and (min-width: 1024px){
+        display: block;
+    }
 }
