--- a/styles/main.css
+++ b/styles/main.css
@@ -129,7 +129,6 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    max-width: 22%;
     margin: 1rem;
   }
   .cardTask:hover .cardTask__desktop--done, .cardTask:hover .cardTask__desktop--change {
@@ -416,51 +415,105 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 .main__button {
-  margin: 3rem 0;
   border: 0;
+  margin: 2rem 0;
   border-radius: 1rem;
   background: #6E4B87;
   font-size: 1.6rem;
   font-weight: 700;
   color: #FFFFFF;
   padding: .8rem 3rem;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  right: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 @media screen and (min-width: 1024px) {
   .main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 23% 23% 23% 23%;
+        grid-template-columns: 23% 23% 23% 23%;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin-bottom: 5rem;
   }
 }
 
 .footer {
   width: 100%;
+  margin-top: 3rem;
+}
+
+.footer__form {
+  width: 80%;
+  margin: 0 auto;
+  background: #E5E5E5;
+  padding: 2rem 5rem;
+  border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__form p {
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: left;
+  color: #6E4B87;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.footer__form--name, .footer__form--email {
+  font-size: 1.4rem;
+  font-weight: 400;
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.footer__form--name input, .footer__form--email input {
+  padding: 1rem;
+  border: 0;
+  border-radius: 1rem;
+}
+
+.footer__form--button {
+  border: 0;
+  font-weight: 700;
+  border-radius: 1rem;
+  background: #6E4B87;
+  padding: 1rem;
+  color: #FFFFFF;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 13%;
 }
 
 .footer__description {
@@ -479,6 +532,7 @@
           flex-direction: column;
   width: 95%;
   padding: 2rem 2.5rem 4rem 2.5rem;
+  margin: 0 auto;
 }
 
 .footer__description--image {
@@ -507,6 +561,23 @@
   color: #FFFFFF;
 }
 
+@media screen and (min-width: 1024px) {
+  .footer {
+    margin-top: 10rem;
+  }
+  .footer__description {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 80%;
+    margin-top: 4rem;
+  }
+  .footer__description--text {
+    text-align: left;
+  }
+}
+
 html {
   font-size: 62.5%;
   max-width: 100vw;
@@ -529,7 +600,9 @@ button, select {
 
 @media screen and (min-width: 1024px) {
   .hide {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=main.css.map */
