--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -3,6 +3,7 @@
     margin-top: 3rem;
     &__form{
         width: 80%;
+        max-width: 87.6rem;
         margin: 0 auto;
         background: $bgColor;
         padding: 2rem 5rem;
