--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -1,5 +1,6 @@
 .main{
     @include flexCenter;
+    margin: 0 auto;
     position: relative;
     
     &__button{
@@ -21,9 +22,11 @@
 
 @media screen and (min-width: 1024px){
    .main{
-       display: grid;
-       grid-template-columns: 23% 23% 23% 23%;
+       display: flex;
+       flex-direction: row;
+       flex-wrap: wrap;
        align-items: flex-start;
-       margin-bottom: 5rem;
+       justify-content: center;
+       max-width: 1081px;
    }
 }
