--- a/styles/components/_cardTask.scss
+++ b/styles/components/_cardTask.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    background: $textColor;
     border: .1rem solid $borderCard;
     border-radius: 1rem;
     position: relative;
@@ -9,7 +10,7 @@
     width: 95%;
     margin-bottom: 2rem;
     position: relative;
-
+    
     &__img{
         max-width: 45%;
         overflow: hidden;
@@ -78,22 +79,18 @@
 
     }
 
+    &__buttons{
+        display: none;
+    }
+
     &__desktop{
         &--done{
             background: $primaryColor;
             margin: 1rem 0;
         }
 
-        &--change{
-            background: $deadlineColor;
-            p{
-                display: inline-block;
-                height: 100%
-            }
-        }
-        
-
         &--done, &--change{
+            display: inline;
             color: $textColor;
             border: 0;
             padding: 1rem;
@@ -101,12 +98,24 @@
             font-weight: 700;
             border-radius: 1rem;
             cursor: pointer;
-            
-            visibility: hidden;
-            display: none;
+            width: 100%;
+            max-width: 21.8rem;
             img{
                 width: 20px;
                 height: 20px;
+            }
+        }
+
+        &--change{
+            background: $deadlineColor;
+            display: inline-block;
+            padding-left: 3rem;
+            position: relative;
+            
+            img {
+                position: absolute;
+                left: 4rem;
+                top: 0.8rem;
             }
         }
     }
@@ -121,18 +130,30 @@
         min-height: 26rem;
         max-width: 25.3rem;
         width: 23%;
-        overflow: hidden;
+        
+        position: relative;
+
+        &__buttons{
+            z-index: -10;
+            position: absolute;
+            left: -0.1rem;
+            background-color: $textColor;
+            border-radius: 0 0 1rem 1rem;
+            border: 1px solid black;
+            padding: 0 1.5rem 1.5rem 2rem;
+            border-top: 0;
+            width: calc(100% + 0.2rem);
+            
+        }
 
         &:hover{
             box-shadow: 1px 5px 10px 0px #00000040;
             
-            .cardTask__desktop{
-
-                &--done,&--change{
-                    visibility: visible;
-                    display: block;
-                    
-                }
+            .cardTask__buttons{
+                display: block;
+                transition: top .4s ease;
+                z-index: 10;
+                top: 94%;
             }
         }
 
@@ -143,7 +164,7 @@
         &__info{
             margin: 1rem 0;
             max-width: 100%;
-            vertical-align: top;
+            
             min-height: 14rem;
 
             &--button{
