--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: #FFFFFF;
   border: 0.1rem solid #000000;
   border-radius: 1rem;
   position: relative;
@@ -105,21 +106,17 @@
   margin-top: 0.5rem;
 }
 
+.cardTask__buttons {
+  display: none;
+}
+
 .cardTask__desktop--done {
   background: #422755;
   margin: 1rem 0;
 }
 
-.cardTask__desktop--change {
-  background: #F04837;
-}
-
-.cardTask__desktop--change p {
-  display: inline-block;
-  height: 100%;
-}
-
 .cardTask__desktop--done, .cardTask__desktop--change {
+  display: inline;
   color: #FFFFFF;
   border: 0;
   padding: 1rem;
@@ -127,13 +124,26 @@
   font-weight: 700;
   border-radius: 1rem;
   cursor: pointer;
-  visibility: hidden;
-  display: none;
+  width: 100%;
+  max-width: 21.8rem;
 }
 
 .cardTask__desktop--done img, .cardTask__desktop--change img {
   width: 20px;
   height: 20px;
+}
+
+.cardTask__desktop--change {
+  background: #F04837;
+  display: inline-block;
+  padding-left: 3rem;
+  position: relative;
+}
+
+.cardTask__desktop--change img {
+  position: absolute;
+  left: 4rem;
+  top: 0.8rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -149,15 +159,29 @@
     min-height: 26rem;
     max-width: 25.3rem;
     width: 23%;
-    overflow: hidden;
+    position: relative;
+  }
+  .cardTask__buttons {
+    z-index: -10;
+    position: absolute;
+    left: -0.1rem;
+    background-color: #FFFFFF;
+    border-radius: 0 0 1rem 1rem;
+    border: 1px solid black;
+    padding: 0 1.5rem 1.5rem 2rem;
+    border-top: 0;
+    width: calc(100% + 0.2rem);
   }
   .cardTask:hover {
     -webkit-box-shadow: 1px 5px 10px 0px #00000040;
             box-shadow: 1px 5px 10px 0px #00000040;
   }
-  .cardTask:hover .cardTask__desktop--done, .cardTask:hover .cardTask__desktop--change {
-    visibility: visible;
+  .cardTask:hover .cardTask__buttons {
     display: block;
+    -webkit-transition: top .4s ease;
+    transition: top .4s ease;
+    z-index: 10;
+    top: 94%;
   }
   .cardTask__img {
     max-width: 100%;
@@ -165,7 +189,6 @@
   .cardTask__info {
     margin: 1rem 0;
     max-width: 100%;
-    vertical-align: top;
     min-height: 14rem;
   }
   .cardTask__info--button {
@@ -530,7 +553,10 @@
 }
 
 .footer__form--name, .footer__form--email {
-  font-size: 1.4rem;
+  font-family: "Open Sans", sans-serif;
+  text-transform: lowercase;
+  color: #757575;
+  font-size: 1.2rem;
   font-weight: 400;
   width: 40%;
   display: -webkit-box;
