--- a/styles/components/_cardTask.scss
+++ b/styles/components/_cardTask.scss
@@ -11,6 +11,11 @@
     margin-bottom: 2rem;
     position: relative;
     
+    
+    &:nth-child(n + 5){
+        display: none;
+    }   
+
     &__img{
         max-width: 45%;
         overflow: hidden;
@@ -81,9 +86,6 @@
 
     &__buttons{
         display: none;
-    }
-
-    &__desktop{
         &--done{
             background: $primaryColor;
             margin: 1rem 0;
@@ -133,8 +135,12 @@
         
         position: relative;
 
+        &:nth-child(n + 5){
+            display: flex;
+        }
+
         &__buttons{
-            z-index: -10;
+            
             position: absolute;
             left: -0.1rem;
             background-color: $textColor;
@@ -154,6 +160,7 @@
                 transition: top .4s ease;
                 z-index: 10;
                 top: 94%;
+                box-shadow: 1px 5px 6px 0px #00000040;
             }
         }
 
@@ -164,7 +171,6 @@
         &__info{
             margin: 1rem 0;
             max-width: 100%;
-            
             min-height: 14rem;
 
             &--button{
