--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,10 +29,7 @@ button, select{
     cursor: pointer;
 }
 
-//Just to show and hide elements
-.hide{
-    display: none;
-    @media screen and (min-width: 1024px){
-        display: flex;
-    }
+.container{
+    max-width: 1081px;
+    width: 95%;
 }
