--- a/styles/components/_cardTask.scss
+++ b/styles/components/_cardTask.scss
@@ -1,193 +1,183 @@
-.cardTask{
+.cardTask {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: $textColor;
+  border: 0.1rem solid $borderCard;
+  border-radius: 1rem;
+  position: relative;
+  padding: 1rem;
+  width: 95%;
+  margin-bottom: 2rem;
+  position: relative;
+
+  &:nth-child(n + 5) {
+    display: none;
+  }
+
+  &__img {
+    max-width: 45%;
+    overflow: hidden;
+  }
+
+  &__info {
+    width: 100%;
+    margin: 0;
+    height: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: $textColor;
-    border: .1rem solid $borderCard;
-    border-radius: 1rem;
-    position: relative;
-    padding: 1rem;
-    width: 95%;
-    margin-bottom: 2rem;
-    position: relative;
-    
-    
-    &:nth-child(n + 5){
-        display: none;
-    }   
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 1rem;
+    transition: 0.4s ease;
 
-    &__img{
-        max-width: 45%;
-        overflow: hidden;
+    &--mobile {
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
     }
 
-    &__info{
-        width: 100%;
-        margin: 0;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding-left: 1rem;
-        transition: .4s ease;
-
-        &--mobile{
-            width: 20px;
-            height: 20px;
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-        }
-
-        &--title{
-            font-size: 1.4rem;
-            color: $titleCard;
-            font-weight: 700;
-        }
-
-        &--desc{
-            color: $borderCard;
-            font-size: 1.2rem;
-            font-weight: 400;
-        }
-
-        &--deadline{
-            font-size: 1.3rem;
-            font-weight: 700;
-            padding: 1rem 0;
-            span{
-                color: $deadlineColor;
-                font-size: 1.7rem;
-                &:nth-child(2){
-                    margin-left: 1rem;
-                    font-weight: 400;
-                    font-size: 1rem;
-                }
-            }
-        }
-
-        &--button{
-            color: $buttonCard;
-            background: none;
-            border: 0.1rem solid $buttonCard;
-            border-radius: 0.7rem;
-            padding: 0.5rem;
-            font-size: 1.6rem;
-            font-weight: 700;
-        }
-
-        &--data{
-            color: $buttonCard;
-            font-size: 1.1rem;
-            margin-top: 0.5rem;
-        }
-
+    &--title {
+      font-size: 1.4rem;
+      color: $titleCard;
+      font-weight: 700;
     }
 
-    &__buttons{
-        display: none;
-        &--done{
-            background: $primaryColor;
-            margin: 1rem 0;
-        }
-
-        &--done, &--change{
-            display: inline;
-            color: $textColor;
-            border: 0;
-            padding: 1rem;
-            font-size: 1.6rem;
-            font-weight: 700;
-            border-radius: 1rem;
-            cursor: pointer;
-            width: 100%;
-            max-width: 21.8rem;
-            img{
-                width: 20px;
-                height: 20px;
-            }
-        }
-
-        &--change{
-            background: $deadlineColor;
-            display: inline-block;
-            padding-left: 3rem;
-            position: relative;
-            
-            img {
-                position: absolute;
-                left: 4rem;
-                top: 0.8rem;
-            }
-        }
+    &--desc {
+      color: $borderCard;
+      font-size: 1.2rem;
+      font-weight: 400;
     }
+
+    &--deadline {
+      font-size: 1.3rem;
+      font-weight: 700;
+      padding: 1rem 0;
+      span {
+        color: $deadlineColor;
+        font-size: 1.7rem;
+        &:nth-child(2) {
+          margin-left: 1rem;
+          font-weight: 400;
+          font-size: 1rem;
+        }
+      }
+    }
+
+    &--button {
+      color: $buttonCard;
+      background: none;
+      border: 0.1rem solid $buttonCard;
+      border-radius: 0.7rem;
+      padding: 0.5rem;
+      font-size: 1.6rem;
+      font-weight: 700;
+    }
+
+    &--data {
+      color: $buttonCard;
+      font-size: 1.1rem;
+      margin-top: 0.5rem;
+    }
+  }
+
+  &__buttons {
+    display: none;
+    &--done {
+      background: $primaryColor;
+      margin: 1rem 0;
+    }
+
+    &--done,
+    &--change {
+      display: inline;
+      color: $textColor;
+      border: 0;
+      padding: 1rem;
+      font-size: 1.6rem;
+      font-weight: 700;
+      border-radius: 1rem;
+      cursor: pointer;
+      width: 100%;
+      max-width: 21.8rem;
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+
+    &--change {
+      background: $deadlineColor;
+      display: inline-block;
+      padding-left: 3rem;
+      position: relative;
+
+      img {
+        position: absolute;
+        left: 14%;
+        top: 0.8rem;
+      }
+    }
+  }
 }
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px) {
+  .cardTask {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem auto;
+    min-height: 26rem;
+    max-width: 25.3rem;
+    width: 23%;
 
-    .cardTask{
-        display: flex;
-        flex-direction: column;
-        margin: 1rem auto;
-        min-height: 26rem;
-        max-width: 25.3rem;
-        width: 23%;
-        
-        position: relative;
+    position: relative;
 
-        &:nth-child(n + 5){
-            display: flex;
-        }
-
-        &__buttons{
-            
-            position: absolute;
-            left: -0.1rem;
-            background-color: $textColor;
-            border-radius: 0 0 1rem 1rem;
-            border: 1px solid black;
-            padding: 0 1.5rem 1.5rem 2rem;
-            border-top: 0;
-            width: calc(100% + 0.2rem);
-            
-        }
-
-        &:hover{
-            box-shadow: 1px 5px 10px 0px #00000040;
-            
-            .cardTask__buttons{
-                display: block;
-                transition: top .4s ease;
-                z-index: 10;
-                top: 94%;
-                box-shadow: 1px 5px 6px 0px #00000040;
-            }
-        }
-
-        &__img{
-            max-width: 100%;
-        }
-
-        &__info{
-            margin: 1rem 0;
-            max-width: 100%;
-            min-height: 14rem;
-
-            &--button{
-                display: none;
-            }
-
-            &--data{
-                margin-bottom: auto;
-            }
-
-            &--desc{
-                min-height: 5.5rem;
-            }
-
-            &--mobile{
-                display: none;
-            }
-        }
+    &:nth-child(n + 5) {
+      display: flex;
     }
+    &:hover {
+      box-shadow: 1px 5px 10px 0px #00000040;
+
+      .cardTask__buttons {
+        display: block;
+        transition: top 0.4s ease;
+        z-index: 10;
+        top: 94%;
+        box-shadow: 1px 5px 6px 0px #00000040;
+      }
+    }
+    &__buttons {
+      position: absolute;
+      left: -0.1rem;
+      background-color: $textColor;
+      border-radius: 0 0 1rem 1rem;
+      border: 1px solid black;
+      padding: 0 1.5rem 1.5rem 2rem;
+      border-top: 0;
+      width: calc(100% + 0.2rem);
+    }
+
+    &__img {
+      max-width: 100%;
+    }
+
+    &__info {
+      margin: 1rem 0;
+      max-width: 100%;
+      min-height: 15rem;
+
+      &--button, &--mobile{
+        display: none;
+      }
+
+      &--data {
+        margin-bottom: auto;
+      }
+
+      &--desc {
+        min-height: 6.5rem;
+      }
+    }
+  }
 }
