--- a/styles/components/_deadlineTags.scss
+++ b/styles/components/_deadlineTags.scss
@@ -1,43 +1,41 @@
-.shortDeadline{
-    &::after{
-        @include flexCenter;
-        content: 'Prazo curto!';
-        text-align: center;
-        font-size: 1.2rem;
-        font-weight: 700;
+.shortDeadline {
+  &::after {
+    @include flexCenter;
+    content: "Prazo curto!";
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
 
-        color: $textColor;
-        background: $primaryColor;
-        
-        border-radius: 0 .5rem .5rem 0;
-        width: 10rem;
-        height: 3rem;
+    color: $textColor;
+    background: $primaryColor;
 
-        position: absolute;
-        top: 2rem;
-        left: -0.5rem;
-    }
-    
+    border-radius: 0 0.5rem 0.5rem 0;
+    width: 10rem;
+    height: 3rem;
+
+    position: absolute;
+    top: 2rem;
+    left: -0.5rem;
+  }
 }
 
-.endingDeadline{
-    &::after{
-        @include flexCenter;
-        content: 'Atrasado! :(';
-        text-align: center;
-        font-size: 1.2rem;
-        font-weight: 700;
+.endingDeadline {
+  &::after {
+    @include flexCenter;
+    content: "Atrasado! :(";
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
 
-        background: $deadlineColor;
-        color: $textColor;
+    background: $deadlineColor;
+    color: $textColor;
 
-        border-radius: 0 .5rem .5rem 0;
-        width: 10rem;
-        height: 3rem;
-        
-        position: absolute;
-        top: 2rem;
-        left: -0.5rem;
-    }
-    
+    border-radius: 0 0.5rem 0.5rem 0;
+    width: 10rem;
+    height: 3rem;
+
+    position: absolute;
+    top: 2rem;
+    left: -0.5rem;
+  }
 }
