--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,35 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
-@import './base/reset';
+@import "./base/reset";
 
-@import './utilities/mixins';
-@import './utilities/variables';
+@import "./utilities/mixins";
+@import "./utilities/variables";
 
-@import './components/cardTask';
-@import './components/deadlineTags';
+@import "./components/cardTask";
+@import "./components/deadlineTags";
 
-@import './layout/header';
-@import './layout/main';
-@import './layout/footer';
+@import "./mobileFirst";
 
+@import "./mediaQueries";
 
-html{
-    font-size: 62.5%;
-    max-width: 100vw;
+html {
+  font-size: 62.5%;
+  max-width: 100vw;
 }
 
-body{
-    max-width: 100vw;
-    min-height: 100vh;
-    background-color: $textColor;
-    font-family: $fontStack;
+body {
+  max-width: 100vw;
+  min-height: 100vh;
+  background-color: $textColor;
+  font-family: $fontStack;
 }
 
-button, select{
-    cursor: pointer;
+button,
+select {
+  cursor: pointer;
 }
 
-.container{
-    max-width: 1081px;
-    width: 95%;
+.container {
+  max-width: 1081px;
+  width: 95%;
 }
