fix: size and color, mobile deadline

--- a/styles/components/_cardTask.scss
+++ b/styles/components/_cardTask.scss
@@ -76,8 +76,8 @@
     }
 
     &--data {
-      color: $buttonCard;
-      font-size: 1.1rem;
+      color: $titleCard;
+      font-size: 1rem;
       margin-top: 0.5rem;
     }
   }
