--- a/styles/utilities/_mixins.scss
+++ b/styles/utilities/_mixins.scss
@@ -1,6 +1,13 @@
-@mixin flexCenter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+@mixin flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@mixin textStyle($size, $weight: 400, $align: center, $family: "Open Sans") {
+  font-size: $size;
+  font-weight: $weight;
+  text-align: $align;
+  font-family: $family;
 }
